# fontbench

./: .gitignore  README.md  pyproject.toml
experiments/grayscale/: Grayscale Analysis.ipynb  compare-ttf-glyphs.py  integration.py  main.py  tests.py
experiments/sidebearings/: char-labels.json  main.py  process-stroke-labels.py  utils.py
fontbench/: __init__.py  font_enums.py  font_proxy.py  integration.py  metrics.py  utils.py
