[project]
name = "fontbench"
version = "0.1.0"
description = "Collection of tools and experiments to diagnose and quantitatively analyze Chinese typefaces."
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "fonttools>=4.61.1",
    "glyphslib>=6.12.6",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
svg = [
    "pillow>=12.1.0",
    "pyvips>=3.1.1",
]
cairo = [
    "cairosvg>=2.8.2",
]
dev = [
    "ipykernel>=7.1.0",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
